--- a/css/admin.css
+++ b/css/admin.css
@@ -6,21 +6,7 @@
     font-family: Pacifico;
     margin-top : 0px;
     text-align: center;
-    text-shadow:     0 1px 0 rgb(105, 206, 247),
-                        0 2px 0 rgb(56, 179, 250),
-                        0 3px 0 hsl(174,5%,70%),
-                        0 4px 0 hsl(174,5%,66%),
-                        0 5px 0 hsl(174,5%,64%),
-                        0 6px 0 hsl(174,5%,62%),
-                        0 7px 0 hsl(174,5%,61%),
-                        0 8px 0 hsl(174,5%,60%),
-        
-                        0 0 5px rgba(0, 0, 0, 0.05),
-                        0 1px 3px rgba(0,0,0,.2),
-                        0 3px 5px rgba(0,0,0,.2),
-                    0 5px 10px rgba(0,0,0,.2),
-                    0 10px 10px rgba(0,0,0,.2),
-                    0 20px 20px rgba(0,0,0,.3);
+   
 }
 
 .logo{
@@ -44,22 +30,7 @@
         height: 70px;
         overflow-y: hidden;
 }
-.warning {
-        padding: 20px;
-        margin: 20px ;
-        border: 1px solid #eee;
-        border-left-width: 5px;
-        border-radius: 3px;
-        margin-bottom: 0;
-        margin-top: -5px;
-        border-left-color: #8ce8f8;
-        -moz-border-radius:7px;
-        -webkit-border-radius:7px;
-        border-radius:7px;  
-        width : 450px;
-        margin-top : 170px;
-        margin-left : 35%;
-}
+
 #btn1{
     padding-left : 130px;
     padding-right : 130px;
@@ -75,4 +46,12 @@
 
 body{
         background-color : #f8f9fa!important;
+    }
+    .form1{
+        float: right;
+        margin-top:300px ;
+    }
+    .form2{
+        float: left;
+        margin-top:300px ;
     }
