--- a/css/salade1.css
+++ b/css/salade1.css
@@ -2,21 +2,7 @@
     font-family: Pacifico;
     margin-top : 0px;
     text-align: center;
-    text-shadow:     0 1px 0 rgb(105, 206, 247),
-                        0 2px 0 rgb(56, 179, 250),
-                        0 3px 0 hsl(174,5%,70%),
-                        0 4px 0 hsl(174,5%,66%),
-                        0 5px 0 hsl(174,5%,64%),
-                        0 6px 0 hsl(174,5%,62%),
-                        0 7px 0 hsl(174,5%,61%),
-                        0 8px 0 hsl(174,5%,60%),
-        
-                        0 0 5px rgba(0, 0, 0, 0.05),
-                        0 1px 3px rgba(0,0,0,.2),
-                        0 3px 5px rgba(0,0,0,.2),
-                    0 5px 10px rgba(0,0,0,.2),
-                    0 10px 10px rgba(0,0,0,.2),
-                    0 20px 20px rgba(0,0,0,.3);
+   
 }
 .logo{
     width: 80px;
@@ -38,21 +24,14 @@
 	overflow-y: hidden;
 }
 
-h2{
-	font-family:Pacifico;
-	text-align: center;
-	margin-top: 150px;
+.video {
+	float: left;
+	margin-top: 400px;
+	margin-left: 50px;
 	
 }
-
-.card {
-	position:absolute;
-	top: 300px;
-	left: 50px;
-	height: 250px;
-	width:450px;
-	
-}
-  
+  .table{
+      width: 300px;
+  }
  
  
