--- a/css/admin.css
+++ b/css/admin.css
@@ -38,8 +38,10 @@ body{
     .form1{
         float: right;
         margin-top:300px ;
+        width: 150px;
     }
     .form2{
         float: left;
         margin-top:300px ;
+        width: 150px; ;
     }
